@@ -3,10 +3,14 @@ package com.xy;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.xy.mode.ExacuteCodeRequest;
 import com.xy.mode.ExacuteCodeResponse;
 import com.xy.mode.ExecuteMessage;
 import com.xy.mode.JudgeInfo;
+import com.xy.security.DefaultSecurityManager;
+import com.xy.security.DenySecurityManager;
 import com.xy.utils.ProcessUtils;
 import org.springframework.util.StopWatch;
 
@@ -26,12 +30,28 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 
+    private static final long TIME_OUT = 5000l;
+
+    private static final String SECURITY_MANAGER_PATH = "D:\\xuexiDaima\\xyoj-code-sandbox\\src\\main\\resources\\security";
+
+    private static final String SECURITY_MANAGER_CLASS_NAME = "MySecurityManager";
+
+    private static final List<String> blacklist = Arrays.asList("Files", "exec");
+
+    private static final WordTree WORD_TREE ;
+
+    static {
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blacklist);
+    }
+
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
         ExacuteCodeRequest exacuteCodeRequest = new ExacuteCodeRequest();
         exacuteCodeRequest.setInputList(Arrays.asList("1 2","1 3"));
-//        String code = ResourceUtil.readStr("textCode/simpleCompute/Main.java", StandardCharsets.UTF_8); //scanner输入
-        String code = ResourceUtil.readStr("textCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
+// //       String code = ResourceUtil.readStr("textCode/simpleCompute/Main.java", StandardCharsets.UTF_8); //scanner输入
+//        String code = ResourceUtil.readStr("textCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
+        String code = ResourceUtil.readStr("textCode/unsafeCode/ReadFileError.java", StandardCharsets.UTF_8);
         exacuteCodeRequest.setCode(code);
         exacuteCodeRequest.setLanguage("java");
         ExacuteCodeResponse exacuteCodeResponse = javaNativeCodeSandbox.executeCode(exacuteCodeRequest);
@@ -40,9 +60,18 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
     }
     @Override
     public ExacuteCodeResponse executeCode(ExacuteCodeRequest exacuteCodeRequest) {
+        System.setSecurityManager(new DenySecurityManager());
+
         List<String> inputList = exacuteCodeRequest.getInputList();
         String code = exacuteCodeRequest.getCode();
         String language = exacuteCodeRequest.getLanguage();
+
+        //校验黑名单代码
+//        FoundWord foundWord = WORD_TREE.matchWord(code);
+//        if (foundWord != null){
+//            System.out.println("代码中包含黑名单"+foundWord.getFoundWord());
+//            return null;
+//        }
 
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir+ File.separator + GLOBAL_CODE_DIR_NAME;
@@ -69,9 +98,20 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
 
         for (String inputArgs : inputList){
-            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s",userCodeParentPath,inputArgs);
+//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s",userCodeParentPath,inputArgs);
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=s% Main %s",userCodeParentPath,SECURITY_MANAGER_PATH,SECURITY_MANAGER_CLASS_NAME,inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
+                //超时控制
+                new Thread(()->{
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        System.out.println("超时了");
+                        runProcess.destroy();
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
 //                ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, "运行",inputArgs); //scanner输入
 
